<resources>
    <string name="app_name">KatalogFilm_byFadli</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_detail">DetailActivity</string>

    <!-- Strings used for Home Activity for Tabs title -->
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>

    <!-- Strings used for item -->
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="dateline">Dateline</string>
    <string name="genre">genre</string>
    <string name="score_value">8.6</string>
    <string name="example">Example</string>

    <!-- Strings used for search View-->
    <string name="search">Search</string>
    <string name="search_hint">Masukan Judul</string>

    <!-- Strings used for Detail Activity -->
    <string name="overview">Overview</string>
    <string name="overview_example">A decorated Marine goes on a rescue mission to save his two young sons from an unhuman threat. As their journey takes them in increasingly dangerous directions, the boys will need to leave their childhoods behind.</string>
    <string name="vote_average">Vote Average :</string>
    <string name="vote_average_value">5.6</string>
    <string name="vote_total">Vote Count   :</string>
    <string name="vote_total_value">100</string>
    <string name="popularity">Popularity   :</string>
    <string name="popularity_value">1000</string>
    <string name="year">2021</string>
    <string name="backdrop_image">backdrop image</string>
    <string name="poster_image">poster image</string>
    <string name="for_dark_image">untuk menggelapkan gambar</string>
    <string name="first_air_date">First Air Date :</string>
    <string name="origin_country">Origin Country :</string>
    <string name="country">Country</string>
    <string name="image_error">image error</string>
    <string name="sorry_error_occured">Sorry Error Occurred</string>
    <string name="movie_recommendations">Movie Recommendations</string>
    <string name="description_error">Description Error</string>
    <string name="data_empty">Data Empty</string>
    <string name="favorite">favorite</string>

</resources>